new Design fixes

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- tajawal -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;400;700;900&display=swap"
       rel="stylesheet"
+      media="screen"
+      href="https://fontlibrary.org//face/metropolis"
+      type="text/css"
     />
     <!--  -->
 
